[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-iter = "0.4.1"
pixels = "0.13.0"
env_logger = "0.10"
log = "0.4"
winit = "0.28"
winit_input_helper = "0.14"
rand = "0.8.5"

